--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -1,9 +1,165 @@
 {
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<center>\n",
+        "    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module2/images/SN_web_lightmode.png\" width=\"300\" alt=\"cognitiveclass.ai logo\">\n",
+        "</center>\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Add your code below following the instructions given in the course"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "tags": []
+      },
+      "source": [
+        "# Data Science Tools and Ecosystem"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In this notebook, Data Science Tools and Ecosystem are summarized."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Some of the popular languages that Data Scientists use are:\n",
+        "1. python\n",
+        "2. R\n",
+        "3. C/C++"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Some of the commonly used libraries used by Data Scientists include:\n",
+        "1. Pandas\n",
+        "2. SciPy\n",
+        "3. NumPy\n",
+        "4. tersonflow\n",
+        "5. keras\n",
+        "6. scikit-learn"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "|data science tools|\n",
+        "|------|\n",
+        "|tersonflow|\n",
+        "|Hadoop|\n",
+        "|SAS|"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Below are a few examples of evaluating arithmetic expressions in Python"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "17"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# This a simple arithmetic expression to mutiply then add integers\n",
+        "(3*4)+5"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "3.3333333333333335"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#  This will convert 200 minutes to hours by diving by 60\n",
+        "200/60"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "tags": []
+      },
+      "source": [
+        "__Objectives__\n",
+        "* List popular languages for Data Science.\n",
+        "* Identify commonly used libraries in Data Science.\n",
+        "* Introduce arithmetic expression examples in Python.\n",
+        "* Demonstrate how to convert minutes to hours in Python.\n",
+        "* Discuss the importance of diverse teams in mitigating bias in AI."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Author"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Szuman Huang"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    }
+  ],
   "metadata": {
     "kernelspec": {
-      "name": "python",
       "display_name": "Python (Pyodide)",
-      "language": "python"
+      "language": "python",
+      "name": "python"
     },
     "language_info": {
       "codemirror_mode": {
@@ -18,113 +174,6 @@
       "version": "3.8"
     }
   },
-  "nbformat_minor": 4,
   "nbformat": 4,
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "source": "<center>\n    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module2/images/SN_web_lightmode.png\" width=\"300\" alt=\"cognitiveclass.ai logo\">\n</center>\n",
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": "#### Add your code below following the instructions given in the course",
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": "# Data Science Tools and Ecosystem",
-      "metadata": {
-        "tags": []
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": "In this notebook, Data Science Tools and Ecosystem are summarized.",
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": "Some of the popular languages that Data Scientists use are:\n1. python\n2. R\n3. C/C++",
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": "Some of the commonly used libraries used by Data Scientists include:\n1. Pandas\n2. SciPy\n3. NumPy\n4. tersonflow\n5. keras\n6. scikit-learn",
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": "|data science tools|\n|------|\n|R studio|\n|anaconda|\n|SAS|",
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": "### Below are a few examples of evaluating arithmetic expressions in Python",
-      "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "source": "# This a simple arithmetic expression to mutiply then add integers\n(3*4)+5",
-      "metadata": {
-        "trusted": true
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "execution_count": 8,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "17"
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": "#  This will convert 200 minutes to hours by diving by 60\n200/60",
-      "metadata": {
-        "trusted": true
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "execution_count": 9,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "3.3333333333333335"
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": "__Objectives__\n* List popular languages for Data Science\n* Identify commonly used libraries in Data Science.
-\n* Introduce arithmetic expression examples in Python.
-\n* Demonstrate how to convert minutes to hours in Python.
-\n* Discuss the importance of diverse teams in mitigating bias in AI.",
-      "metadata": {
-        "tags": []
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": "## Author",
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": "Szuman Huang",
-      "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "source": "",
-      "metadata": {},
-      "execution_count": null,
-      "outputs": []
-    }
-  ]
+  "nbformat_minor": 4
 }
