--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -61,9 +61,9 @@
       "source": [
         "|data science tools|\n",
         "|------|\n",
-        "|tersonflow|\n",
-        "|Hadoop|\n",
-        "|SAS|"
+        "|Jupyter Notebook|\n",
+        "|R Studio|\n",
+        "|Zeppelin|\n"
       ]
     },
     {
